--- a/blocks/footer/__copyright/footer__copyright.css.css
+++ b/blocks/footer/__copyright/footer__copyright.css.css
@@ -1,18 +1,27 @@
 .footer__copyright {
+    max-width: 186px;
+    max-height: 14px;
     font-family: 'Inter';
     font-style: normal;
     font-weight: 400;
     font-size: 14px;
     line-height: 16px;
-    text-align: right;
+    
     color: #FFFFFF;
     margin: 0;
 }
 
+@media screen and (max-width: 755px) {
+    .footer__copyright {
+     text-align: start;
+        
+    }
 
+}
 @media screen and (max-width: 320px) {
     .footer__copyright {
         line-height: 14px;
+        
     }
 
 }
