--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -18,8 +18,8 @@
 
 @media screen and (max-width:320px) {
     .footer__link {
-        width: 74px;
-        height: 24px;
+        max-width: 74px;
+        max-height: 24px;
         font-size: 24px;
         line-height: 24px;
     }
