--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -27,6 +27,12 @@
 
     }
 }
+@media screen and (max-width: 755px) {
+    .footer {
+        flex-direction: column;
+       
+    }
+}
 
 @media screen and (max-width:320px) {
     footer {
