--- a/pages/index.css
+++ b/pages/index.css
@@ -23,6 +23,8 @@
 @import url(../blocks/intro/__title/intro__title.css);
 @import url(../blocks/intro/__text/intro__text.css);
 @import url(../blocks/intro/__list/intro__list.css);
+@import url(../blocks/intro/__list-item/intro__list-item.css);
+@import url(../blocks/intro/__list-span/intro__list-span.css);
 
 /*Блок photo-grid*/
 @import url(../blocks/photo-grid/photo-grid.css);
