--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -18,9 +18,9 @@
 @media screen and (min-width:320px) and (max-width:747px) {
     .cover__title {
         font-size: calc(32px + (72 - 32) * (100vw - 320px) / (767 - 320));
-        line-height: calc(35px + (76 - 35) * (100vw - 320px) / (767-320));
-        margin-bottom: calc(16px + (32 - 16) * (100vw - 320px) / (767-320));
-        max-width: calc(288px + (560 -288) * (100vw-320px) / (767 - 320));
+        line-height: calc(35px + (76 - 35) * (100vw - 320px) / (767 - 320));
+        margin-bottom: calc(16px + (32 - 16) * (100vw - 320px) / (767 - 320));
+        max-width: calc(288px + (560 - 288) * (100vw - 320px) / (767 - 320));
     }
 }
 
