--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -1,7 +1,13 @@
-.page{
-    font-family: 'Inter', 'Arial', 'Helvetica', sans-serif;
-    font-weight: normal;
+.page {
+    font-family: 'Inter', 'Arial', sans-serif;
+    font-weight: 400;
     font-style: normal;
     background-color: #2A2C2F;
+    color: #FFFFFF;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    -webkit-text-size-adjust: 100%;
+    -ms-text-size-adjust: 100%;
+    -moz-text-size-adjust: 100%;
+    text-rendering: optimizeLegibility;
 }
-
