--- a/blocks/place/__link/place__link.css
+++ b/blocks/place/__link/place__link.css
@@ -1,15 +1,9 @@
 .place__link {
-    width: 456px;
-    height: 22px;
-    left: 648px;
-    top: 2647px;
-    font-family: 'Inter';
-    font-style: normal;
-    font-weight: 400;
     font-size: 18px;
     line-height: 22px;
     text-decoration-line: underline;
     color: #FFFFFF;
+    margin: 0;
 }
 
 .place__link:hover {
