--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -1,22 +1,17 @@
 .place__title {
     grid-area: title;
     max-width: 460px;
-    max-height: 152px;
-    font-family: 'Inter';
-    font-style: normal;
+    width: 100%;
     font-weight: 900;
     font-size: 72px;
     line-height: 76px;
-    color: #FFFFFF;
     align-self: end;
     margin: 0;
-   
 }
 
 @media screen and (max-width:1024px) {
     .place__title {
         max-width: 440px;
-        max-height: 152px;
         font-size: 42px;
         line-height: 46px;
     }
@@ -25,24 +20,14 @@
 @media screen and (max-width:768px) {
     .place__title {
         max-width: 340px;
-        max-height: 92px;
         font-size: 42px;
         line-height: 46px;
     }
 }
 
-@media screen and (min-width:320px) and (max-width: 768px) {
-    .place__title {
-        max-width: calc(32px + (42 - 32) * (100vw - 320px) / (768 - 320));
-
-    }
-}
-
-
 @media screen and (max-width:320px) {
     .place__title {
         max-width: 288px;
-        max-height: 35px;
         font-size: 32px;
         line-height: 35px;
         margin-left: 16px;
