--- a/pages/index.css
+++ b/pages/index.css
@@ -51,7 +51,7 @@
 @import url(../blocks/footer/footer.css);
 @import url(../blocks/footer/__links/footer__links.css);
 @import url(../blocks/footer/__link/footer__link.css);
-@import url(../blocks/footer/__copyright/footer__copyright.css.css);
+@import url(../blocks/footer/__copyright/footer__copyright.css);
 
 
 
