--- a/blocks/intro/__title/intro__title.css
+++ b/blocks/intro/__title/intro__title.css
@@ -22,6 +22,7 @@
 
 @media screen and (max-width: 320px) {
     .intro__title {
+        white-space: pre-line ;
         max-width: 288px;
         font-size: 32px;
         line-height: 35px;
