--- a/blocks/header/__lang-link/__lang-link.css
+++ b/blocks/header/__lang-link/__lang-link.css
@@ -1,8 +1,9 @@
 .header__lang-link{
     color: #FFFFFF;
+    text-decoration: none;
 }
 
 .header__lang-link:hover{
-    opacity: 0.5;
+    opacity: 0.8;
     transition: 0.5s ease-in-out;
 }
