--- a/blocks/header/__logo/header__logo.css
+++ b/blocks/header/__logo/header__logo.css
@@ -4,13 +4,13 @@
     background-size: cover;
     background-position: center;
     width: 176px;
-    height: 100%;
+    height: 52px;
 }
 
 
 @media screen and (max-width: 320px) {
     .header__logo {
         width: 142px;
-        max-height: 42px;
+        height: 42px;
     }
 }
