--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -1,7 +1,5 @@
 .intro {
     margin: 92px 0 0 148px;
-    max-height: 754px;
-    max-width: 690px;
 }
 
 @media screen and (min-width: 1024px) and (max-width: 1280px) {
@@ -25,13 +23,11 @@
 @media screen and (max-width: 768px) {
     .intro {
         margin: 88px 24px 0 24px;
-        max-width: 720px;
     }
 }
 
 @media screen and (max-width: 320px) {
     .intro {
-        margin: 64px auto 0 auto;
-        max-width: 288px;
+        margin: 64px 16px 0 16px;
     }
 }
