--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -1,15 +1,14 @@
 .lead__caption {
-    max-width: 158px;
     font-size: 10px;
     line-height: 14px;
     letter-spacing: 1.5px;
     text-transform: uppercase;
-    margin-top: 8px;
+    margin: 0;
 }
 
 @media screen and (max-width: 920px) {
     .lead__caption {
-        margin: 8px 0 0 24px;
+        margin-bottom: 24px;
     }
 }
 
@@ -21,6 +20,6 @@
 
 @media screen and (max-width: 320px) {
     .lead__caption {
-        margin: 8px 0 0 16px;
+        margin-bottom: 16px;
     }
 }
