--- a/blocks/lead/__image/lead__image.css
+++ b/blocks/lead/__image/lead__image.css
@@ -2,6 +2,7 @@
     width: 100%;
     max-height: 615px;
     margin-top: 64px;
+    margin-bottom: 8px;
 }
 
 @media screen and (max-width: 1024px) {
