--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -1,50 +1,74 @@
 .photo-grid {
     padding-top: 92px;
-    margin: 0 48px 0 48px;
+    margin: 0 auto 0 auto;
     max-width: 1184px;
-    max-height: 671px;
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: repeat(3, 1fr);
+    grid-template-columns: repeat(4, auto);
+    grid-template-rows: repeat(3, auto);
     gap: 16px;
 }
 
 
-@media screen and (max-width: 1024px) {
+@media screen and (max-width: 1279px) {
     .photo-grid {
-        max-width: 928px;
-        max-height: 942px;
-        grid-template-columns: repeat(3, 1fr);
-        grid-template-rows: repeat(4, 1fr);
+        margin: 0 48px 0 48px;
+        grid-template-columns: repeat(3, auto);
+        grid-template-rows: repeat(4, auto);
         gap: 14px;
     }
 }
 
-@media screen and (min-width: 768px) and (max-width:1024px) {
+@media screen and (max-width: 1024px) {
     .photo-grid {
+        max-width: 928px;
+        margin: 0 48px 0 48px;
+        padding-top: 88px;
+
+    }
+}
+
+@media screen and (min-width:768px) and (max-width: 1024px) {
+    .photo-grid {
+        margin-left: calc(24px + (48 - 24) * (100vw - 768px) / (1024 - 768));
         margin-right: calc(24px + (48 - 24) * (100vw - 768px) / (1024 - 768));
+    }
+}
+
+@media screen and (max-width: 1023px) {
+    .photo-grid {
+        grid-template-columns: repeat(2, auto);
+        grid-template-rows: repeat(6, auto);
+        gap: 16px;
     }
 }
 
 @media screen and (max-width: 768px) {
     .photo-grid {
-        padding-top: 88px;
-        margin: 0 24px 0 24px;
         max-width: 720px;
-        max-height: 1664px;
-        grid-template-columns: repeat(2, 1fr);
-        grid-template-rows: repeat(6, 1fr);
-        gap: 16px;
+        margin: 0 24px 0 24px;
+    }
+}
+
+@media screen and (min-width:320px) and (max-width: 768px) {
+    .photo-grid {
+        margin-left: calc(16px + (24 - 16) * (100vw - 320px) / (768 - 320));
+        margin-right: calc(16px + (24 - 16) * (100vw - 320px) / (768 - 320));
+    }
+}
+
+@media screen and (max-width: 767px) {
+    .photo-grid {
+        padding-top: 64px;
+        max-width: 100%;
+        grid-template-columns: auto;
+        grid-template-rows: repeat(12, auto);
+        gap: 12px;
     }
 }
 
 @media screen and (max-width: 320px) {
     .photo-grid {
         max-width: 288px;
-        max-height: 2724px;
         margin: 0 16px 0 16px;
-        grid-template-columns: auto;
-        grid-template-rows: repeat(12, 1fr);
-        gap: 12px;
     }
 }
