--- a/blocks/place/__image/place__image.css
+++ b/blocks/place/__image/place__image.css
@@ -14,6 +14,13 @@
     }
 }
 
+@media screen and (min-width:769px) and (max-width: 1023px) {
+    .place__image {
+        width: 98%;
+
+    }
+}
+
 @media screen and (max-width:768px) {
     .place__image {
         max-width: 340px;
@@ -22,14 +29,14 @@
     }
 }
 
-@media screen and (max-width:389px) {
+@media screen and (max-width:767px) {
     .place__image {
         max-width: 100%;
         max-height: 100%;
     }
 }
 
-
+/*
 @media screen and (max-width:320px) {
     .place__image {
         max-width: 320px;
