--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -12,10 +12,23 @@
 @media screen and (max-width:1024px) {
     .place__title {
         max-width: 440px;
-        font-size: 42px;
-        line-height: 46px;
     }
 }
+
+@media screen and (min-width:768px) and (max-width: 1024px) {
+    .place__title {
+        font-size: calc(42px + (72 - 42) * (100vw - 768px) / (1024 - 768));
+        line-height: calc(46px + (76 - 46) * (100vw - 768px) / (1024 - 768));
+    }
+}
+
+@media screen and (max-width:887px) {
+    .place__title {
+        white-space:pre-line;
+    }
+}
+
+
 
 @media screen and (max-width:768px) {
     .place__title {
@@ -25,11 +38,27 @@
     }
 }
 
+@media screen and (min-width:320px) and (max-width: 768px) {
+    .place__title {
+        font-size: calc(32px + (42 - 32) * (100vw - 320px) / (768 - 320));
+        line-height: calc(35px + (46 - 35) * (100vw - 320px) / (768 - 320));
+        
+    }
+}
+
+@media screen and (max-width:767px) {
+    .place__title {
+        margin-left: 16px;
+        white-space: nowrap;
+    }
+}
+
+
 @media screen and (max-width:320px) {
     .place__title {
         max-width: 288px;
         font-size: 32px;
         line-height: 35px;
-        margin-left: 16px;
+        
     }
 }
