--- a/blocks/place/__url-heading/place__url-heading.css
+++ b/blocks/place/__url-heading/place__url-heading.css
@@ -1,6 +1,7 @@
 .place__url-heading {
     max-width: 456px;
     font-size: 12px;
+    font-weight: 400;
     line-height: 12px;
     letter-spacing: 2px;
     color: #AAAAAA;
