--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -1,29 +1,29 @@
 .places {
     max-width: 984px;
-    max-height: 5177px;
-    margin: 92px auto 92px auto;
+    padding-top:92px;
+    margin: 0 auto 92px auto;
 }
 
 @media screen and (max-width:1024px) {
     .places {
+        max-width: 928px;;
         margin-left: 48px;
         margin-right: 48px;
     }
 }
 
 
-@media screen and (max-width:768px) {
+@media screen and (max-width:1023px) {
     .places {
-        margin-left: 24px;
-        margin-right: 24px;
-        margin-bottom: 90px;
+        margin:0 24px 90px 24px;
+        padding-top:88px
     }
 }
 
-@media screen and (max-width:320px) {
+
+@media screen and (max-width:767px) {
     .places {
-        margin-left: 0;
-        margin-right: 0;
-        margin-bottom: 66px;
+        margin: 0 0 66px 0;
+        padding-top: 64px;;
     }
 }
