--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -6,7 +6,7 @@
 
 @media screen and (max-width:1024px) {
     .places {
-        max-width: 928px;;
+        max-width: 928px;
         margin-left: 48px;
         margin-right: 48px;
     }
@@ -16,7 +16,7 @@
 @media screen and (max-width:1023px) {
     .places {
         margin:0 24px 90px 24px;
-        padding-top:88px
+        padding-top:88px;
     }
 }
 
@@ -24,6 +24,6 @@
 @media screen and (max-width:767px) {
     .places {
         margin: 0 0 66px 0;
-        padding-top: 64px;;
+        padding-top: 64px;
     }
 }
