--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -8,7 +8,7 @@
 
 @media screen and (max-width: 920px) {
     .lead__caption {
-        margin-bottom: 24px;
+        margin-left: 24px;
     }
 }
 
@@ -20,6 +20,7 @@
 
 @media screen and (max-width: 320px) {
     .lead__caption {
-        margin-bottom: 16px;
+        margin: 0;
+        margin-left: 16px;
     }
 }
