--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -53,10 +53,15 @@
     }
 }
 
+@media screen and (max-width:356px) {
+    .place__title {
+        max-width: 288px;
+    }
+}
+
 
 @media screen and (max-width:320px) {
     .place__title {
-        max-width: 288px;
         font-size: 32px;
         line-height: 35px;
         
